# wifi_station

./: .gitignore  CMakeLists.txt  README.ED  app.json  prj.conf  setup_env.sh  sysbuild.conf
boards/: nrf7002dk_nrf5340_cpuapp.overlay
boards/arm/mira_station_nrf5340_cpuapp/: Kconfig.board  board.cmake  mira_station_nrf5340_cpuapp_defconfig
boards/arm/mira_station_nrf5340_cpuapp/doc/: index.rst
src/: main.c  wifi_connect.c  wifi_connect.h  wifi_credentials.c  wifi_credentials.h  wifi_manager.c  wifi_power.c  wifi_station.h
